package com.cjj.designpattern.structural.proxy;

/**
 * Created by chenjj on 2019/1/2
 */
public class PrinterProxy implements Printable{
    private String name;
    private Printer real;
    public PrinterProxy(){}

    public PrinterProxy(String name){
        this.name=name;
    }

    @Override
    public synchronized void setPrinterName(String name) {
        if(real!=null){
            real.setPrinterName(name);
        }
    }

    @Override
    public String getPrinterName() {
        return name;
    }

    @Override
    public void print(String string) {
        realize();
        real.print(string);

    }

    private synchronized void realize() {
        if(real==null){
            real=new Printer(name);
        }
    }
}
